@@ -1,7 +1,7 @@
 Authors of Isoquery
 ===================
 
-Tobias Toedter <toddy@debian.org>
+Tobias Quathamer <toddy@debian.org>
     Main author, German translation
 
 Christian Perrier <bubulle@debian.org>
