@@ -1,6 +1,6 @@
 # automake options for Isoquery
 #
-# Copyright (C) 2007-2008 Tobias Toedter
+# Copyright (C) 2007-2008 Tobias Quathamer
 #
 # This file is part of Isoquery.
 # 
