@@ -2,4 +2,4 @@ PO4A-HEADER:mode=after;position=AUTOR;beginboundary=\.SH
 
 .SH ÜBERSETZUNG
 
-Tobias Toedter <toddy@debian.org>
+Tobias Quathamer <toddy@debian.org>
