@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH ISOQUERY 1 "April 24, 2008"
+.TH ISOQUERY 1 "November 26, 2008"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -170,7 +170,7 @@ will be used.
 .I /usr/share/xml/iso-codes/iso_15924.xml
 
 .SH LICENSE
-Copyright (C) 2007-2008 Tobias Toedter <toddy@debian.org>
+Copyright (C) 2007-2008 Tobias Quathamer <toddy@debian.org>
 .PP
 Isoquery is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -187,4 +187,4 @@ along with this program.
 If not, see <http://www.gnu.org/licenses/>.
 
 .SH AUTHOR
-Tobias Toedter <toddy@debian.org>
+Tobias Quathamer <toddy@debian.org>
