@@ -1,4 +1,4 @@
-# Copyright (C) 2007-2008 Tobias Toedter
+# Copyright (C) 2007-2008 Tobias Quathamer
 #
 # This file is part of Isoquery.
 # 
