@@ -18,7 +18,7 @@ XGETTEXT_OPTIONS = --keyword=_ --keyword=N_
 # or entity, or to disclaim their copyright.  The empty string stands for
 # the public domain; in this case the translators are expected to disclaim
 # their copyright.
-COPYRIGHT_HOLDER = Tobias Toedter
+COPYRIGHT_HOLDER = Tobias Quathamer
 
 # This is the email address or URL to which the translators shall report
 # bugs in the untranslated strings:
