@@ -2,7 +2,7 @@
 isoquery -v
 # Expected output
 isoquery 0.16
-Copyright (C) 2007-2008 Tobias Toedter
+Copyright (C) 2007-2008 Tobias Quathamer
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
